# python-blosc2

./: CMakeLists.txt  pyproject.toml  requirements-build.txt
.github/workflows/: cibuildwheels.yml
blosc2/: my_numba.py
examples/: my_numba_example.ipynb
