[build-system]
requires = ["setuptools", "scikit-build == 0.16.7", "cython", "cmake == 3.26.1", "ninja", "oldest-supported-numpy"]

[tool.cibuildwheel]
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"

[tool.black]
line-length = 109

[tool.ruff]
line-length = 109

[tool.isort]
profile = "black"
multi_line_output = 3
